# app/controllers/users/omniauth_callbacks_controller.rb
@@ -1,30 +1,26 @@
 # frozen_string_literal: true
 
 class Users::OmniauthCallbacksController < Devise::OmniauthCallbacksController
-  # You should configure your model like this:
-  # devise :omniauthable, omniauth_providers: [:twitter]
+  include ApiResponder
+  include ErrorHandlers
 
-  # You should also create an action method in this controller like this:
-  # def twitter
-  # end
+  def google_oauth2
+    @user = User.from_omniauth(request.env["omniauth.auth"])
 
-  # More info at:
-  # https://github.com/heartcombo/devise#omniauth
+    if @user.persisted?
+      flash[:notice] = I18n.t "devise.omniauth_callbacks.success", kind: "Google"
+      sign_in_and_redirect @user, event: :authentication
+    else
+      session["devise.google_data"] = request.env["omniauth.auth"]
+      redirect_to new_user_registration_url, alert: "Failed to create user from Google OAuth"
+    end
+  rescue StandardError => e
+    Rails.logger.error("OmniAuth Google error: #{e.message}")
+    Rails.logger.error(e.backtrace.join("\n"))
+    redirect_to new_user_registration_url, alert: "An error occurred during sign in. Please try again."
+  end
 
-  # GET|POST /resource/auth/twitter
-  # def passthru
-  #   super
-  # end
-
-  # GET|POST /users/auth/twitter/callback
-  # def failure
-  #   super
-  # end
-
-  # protected
-
-  # The path used when OmniAuth fails
-  # def after_omniauth_failure_path_for(scope)
-  #   super(scope)
-  # end
+  def failure
+    redirect_to root_path, alert: "Authentication failed"
+  end
 end
